--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,3 +1,4 @@
+Check all requires to make sure they can't be substituted for an include (abstract them to allow for better error handling)
 Finish ampache.php plugin to support genres, videos, and playlists
 Remove smarty from the entire system because it sucks
 Work on cron.php script
