git-svn-id: svn://localhost/Media%20Server@287 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,6 @@
+2010-04-07
+Worked on monolithicmedia.org website.
+
 2010-04-06
 Removed defaulting functionality from theme() in template.php plugin
 	All templates must now implement everything they need by themselves
