--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,19 +1,32 @@
+Add module called balancer used for load balancing
+	Basically it allows the administrator to set different conditions for when to use a different subdomain for accessing media
+		It will forward the use to the other domain with the exact same request information based on the conditions
+	This will allow multiple computers running identical set ups to output files and transcode more efficiently
+Add 'guess' parameter to list module to allow randomly selected files from the same genre
+Add 'long_play' option to encode so instead of inputting a file to vlc, the system inputs a playlist and devices only have to buffer once and no more breaks
+Add a register script to the install process that allows users to register a username, password, and domain for their site, with the monolithicmedia drupal site.
+	Include a key that is unique to every download, to prevent spamming.
+Abstract the setup functions, modules should be set up after being loaded to load more dependencies, this is similar to drupal's module.install file
+Fix up template settings in core.php core_variables() function
 Current solution for dependencies is not very good, rewrite, possibly call module init whenever handles() is called?
 	Checks abstracted into setting_ wrappers, is this the best solution?
 Finish setting input handling in the modules admin plugin
 Create a status admin tool
 Finish setting() function in settings.php plugin
 	Settings should also be loadable from the database
+Cache all loaded module files in settings database (possibly storing in admin settings and deserializing would be efficient?)
+	Save module settings in database
 Make validate_return actually validate the return path
-Fix vulnerability with template printing out any valid file
 Test and find a fix for some media dropping off the network
 	Check to see if the file exists in the archive handler before trying to analyze it
 Remove all occurances on props['WHERE'] being set to a string
 	It should be set to an array from now on, so that we can differentiate between each query_alter_
 	Same with all the other variables
 Start implementing lang() calls
+	Fix where to save translations
+	Fix up lang calls, accept multiple parameters and don't translate certain fields,
+		this will allow us to insert things like file paths in the middle of the sentence
 Set variables to default specified by template if they are not set because of an improper input
-Cache all loaded module files in settings database (possibly storing in admin settings and deserializing would be efficient?)
 Finish ampache.php module to support genres, videos, and playlists
 Check for bt module in install.php script
 Add bttracker install script to admin/install.php to fully bootstrap the install process
@@ -29,9 +42,8 @@ Interface with mediatomb and support UPnP protocol
 ------------- Module TODO -------------
 Finish users.php module
 Work on settings.php module
-	Global settings such as default template to use for each devide logged in the to account
+	Global settings such as default template to use for each device logged in the to account
 	Template settings, must provide specification in template config, use database for storing fields?
-	Make display module obsolete by completing the settings modules
 Work on tools.php module for admin
 	Provide useful information in tools section about missing songs (music.php tool?)
 Make a sync module in admin section for syncing between two databases and pulling out differences
@@ -43,7 +55,6 @@ Get ranges working in encode module
 Figure out a way of doing this with files even if stdin is not being used in the command, if fopen is writing to a file, does it file feof when reading from the same file simulaneously?
 Make convert.php module recognize video thumbnails and use vlc to extract them
 ------------- Handler TODO -------------
-Look in to the possibility of corruption if the db_files::handles check for is_dir or is_file is removed (if file is removed before cron.php detects it, it won't load all the available information from DB)
 Make a discography handler that parses out wikipedia discographys, store album information, and return links to Full Discography, and Partial Discography
 	Base discography handler on discogs.com
 	this will list out each artist with full or missing albums
@@ -57,7 +68,6 @@ Work on db_movies, use cUrl to download movie information from imdb, use the vol
 Figure out how template_path and modules_path is used in the javascript in the WMP and EXT JS templates
 Test modifications to extjs and wmp template script and link includes
 Finish mobile template.
-Convert some templates to php instead of smarty because it would look nicer to developers
 Finish Ampache XML API template
 Work on finishing EXT JS template, and add more templates from Ampache, Jinzora, Subsonic, and WinAmp Remote
 ------------- DEFAULT -------------
@@ -79,4 +89,3 @@ Get settings dialog working and set up user accounts to control it
 Finish the player app that displays pictures
 Make players resize to Player window
 ------------- LIVE -------------
-Add basename to template output if filename is not available from handler selection otherwise it just shows up blank
