--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,7 +1,10 @@
+------------- GENERAL TODO -------------
+Look at drupal and find out if there is a better way to save errors to the session at the end of a script
 Add module called balancer used for load balancing
 	Basically it allows the administrator to set different conditions for when to use a different subdomain for accessing media
 		It will forward the use to the other domain with the exact same request information based on the conditions
 	This will allow multiple computers running identical set ups to output files and transcode more efficiently
+	Enter username and password for each remote services and download the remote load balancing information to check for conflicts and easy reference
 Add 'guess' parameter to list module to allow randomly selected files from the same genre
 Add 'long_play' option to encode so instead of inputting a file to vlc, the system inputs a playlist and devices only have to buffer once and no more breaks
 Add a register script to the install process that allows users to register a username, password, and domain for their site, with the monolithicmedia drupal site.
@@ -30,22 +33,24 @@ Set variables to default specified by template if they are not set because of an
 Finish ampache.php module to support genres, videos, and playlists
 Check for bt module in install.php script
 Add bttracker install script to admin/install.php to fully bootstrap the install process
-Finish fixing up modules to use new API
-	admin tools section
 Speed testing with new User queries
 More compatibility testing with clients
-------------- GENERAL TODO -------------
 Store the remote_address in the session, and if it doesn't match up with what is in the session then kill the session and die
 Create a unique id and insert it into forms, this is required when the form is submitted
 Make hard links and soft links, hard links are replaced when they are put in to the database, soft links are replaced when they are read from the database, this will allow us to do more network stuff
 Interface with mediatomb and support UPnP protocol
+------------- ADMIN TOOLS -------------
+Finish fixing up modules to use new API
+	admin tools section
+Work on tools.php module for admin
+	Provide useful information in tools section about missing songs (music.php tool?)
+Add netflix movie checker to admin tools
+Add show renamer to admin tools
 ------------- Module TODO -------------
 Finish users.php module
 Work on settings.php module
 	Global settings such as default template to use for each device logged in the to account
 	Template settings, must provide specification in template config, use database for storing fields?
-Work on tools.php module for admin
-	Provide useful information in tools section about missing songs (music.php tool?)
 Make a sync module in admin section for syncing between two databases and pulling out differences
 	Use musicbrainz to sync music
 FIX bt.php module to work with command line torrent seeder on windows
