git-svn-id: svn://localhost/Media%20Server@308 cc2d05dc-c430-0410-aecc-8448c616cd3b

--- a/CHANGELOG.TXT
+++ b/CHANGELOG.TXT
@@ -1,3 +1,7 @@
+2010-05-14
+Modules can now use the 'depends on' field set to their own name to call a function to determine dependencies
+	search and user use this
+
 2010-05-12
 Made lots of changes regarding the handlers
 	Handlers register themselves just like any other module
